Fix style of code search nav item
It had a underline decoration, that didn't look nice.

--- a/client/web/src/nav/NavBar/NavDropdown.module.scss
+++ b/client/web/src/nav/NavBar/NavDropdown.module.scss
@@ -21,6 +21,9 @@
     }
 
     &-link {
+        &:hover{
+            text-decoration: none;
+        }
         --link-hover-color: inherit;
         --link-hover-decoration: none;
 
